Optimise for low memory environment